// Regression snapshot for the calibrated recommendation-scoring pipeline
// (app/api/recommend/route.ts: hardFilter -> score* -> scoreCar -> calcResults,
// all reached here through the single exported `calcResults`). This is a
// SAFETY NET, not a spec — it exists to catch any future change that shifts
// scoring/ranking, intentional or not. It is NOT a place to "fix" scoring: if
// this fails after a deliberate calibration change, update the snapshot
// (`npx vitest run -u`) with full awareness of what changed and why, never as
// a reflex to make the test pass. See CLAUDE.md's "Spec vs. current state" —
// the caps/weights this pipeline uses are deliberately calibrated.
//
// Loads ONLY the frozen fixture at tests/fixtures/scoring-cars.json,
// regenerated by scripts/snapshot-scoring-fixtures.ts (run manually, never by
// this suite). This test NEVER touches Supabase.
//
// Fixture cars are structuredClone()'d per profile: norm()/applyBestVariant()
// mutate their CarData argument in place (the `_n` short-circuit flag,
// `body`/`boot` overwritten by applyBestVariant) — reusing the same array
// across profiles without cloning would silently corrupt later profiles with
// leftover state from earlier ones. Same pattern scripts/score-audit.ts
// already established for this exact hazard (see CLAUDE.md's "Conventions to
// preserve").

import { describe, it, expect } from "vitest";
import fs from "fs";
import path from "path";
import { fileURLToPath } from "url";
import type { CarData, Answers } from "@/app/api/recommend/route";
import { calcResults } from "@/app/api/recommend/route";

const __dirname = path.dirname(fileURLToPath(import.meta.url));

const fixtureCars: CarData[] = JSON.parse(
  fs.readFileSync(path.join(__dirname, "fixtures", "scoring-cars.json"), "utf8")
);

// 5 of the 20 existing profiles in scripts/score-audit-profiles.json, picked
// to span the 4 scoring dimensions plus one hard-filter edge case — reused
// verbatim rather than reinvented, same rationale as the fixture cars: real,
// already-exercised answers over hand-crafted synthetic ones. See the plan
// for why each was chosen.
const ALL_PROFILES: { name: string; answers: Answers }[] = JSON.parse(
  fs.readFileSync(path.join(__dirname, "..", "scripts", "score-audit-profiles.json"), "utf8")
);
const PROFILE_NAMES = [
  "P08_workhorse_diesel_durability",  // heavy tow + rural + big_commanding -> scorePractical, hardFilter towing/env eliminations
  "P04_family_diesel_safety",          // family + safety/comfort priorities -> scoreSafety, hardFilter seats<4 elimination
  "P07_drivers_car_petrol_pleasure",   // drivers_car + driving_pleasure/looks + manual -> scorePreference
  "P01_commuter_petrol_durability",    // commuter/city/15k-25k -> scoreFinancial (budget, DCT-city penalty, resale)
  "P14_first_car_petrol",              // budget 5k-10k, first_car -> hardFilter maxPowerKw>200 elimination (Tesla Model S)
];
const profiles = PROFILE_NAMES.map((name) => {
  const p = ALL_PROFILES.find((entry) => entry.name === name);
  if (!p) throw new Error(`Profile "${name}" not found in scripts/score-audit-profiles.json`);
  return p;
});

describe("recommend scoring — regression snapshot", () => {
  it.each(profiles)("$name", ({ answers }) => {
    // Fresh clone per profile — see file-header comment on the mutation hazard.
    const cloned = structuredClone(fixtureCars);
    const results = calcResults(cloned, answers);

    // Compact projection: identity + the observable ranking outcome (score,
    // isBest) + the per-dimension breakdown scoreCar already attaches
    // (car._dims) — gives a precise "which dimension regressed" signal on
    // failure, not just "the total changed". NOT the full ScoredCar (car is
    // huge and mostly unrelated to what this test is protecting).
    const projection = results
      .map((r) => ({
        id: r.car.id,
        make: r.car.make,
        model: r.car.model,
        score: r.score,
        isBest: r.isBest,
        dims: r.car._dims,
      }))
      // calcResults already sorts by score descending, but pin the order
      // explicitly (stable tie-break on id) so the snapshot's row order can
      // never flap between runs on an exact score tie.
      .sort((a, b) => b.score - a.score || a.id.localeCompare(b.id));

    expect(projection).toMatchSnapshot();
  });
});
